<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add">Add</string>
    <string name="save_button">Save</string>
    <string name="description_button">Description</string>
    <string name="keyword_button">Keywords</string>
    <string name="title_activity_modify">Edit</string>
    <string name="next_reminder">Next Reminder:</string>
    <string name="times_reminded">Times reminded:</string>
    <string name="reset">Reset</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_view">View</string>
    <string name="done_text">Done</string>
    <string name="modify_text">Edit</string>
    <string name="ontime_text">On time</string>
    <string name="early_text">Early</string>
    <string name="late_text">Late</string>
    <string name="feedback_text">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_scaling_factor">Scaling factor</string>
    <string name="text_first_reminder">First reminder</string>
    <string name="text_reminder_times">Reminder times</string>
    <string name="action_about">About</string>
    <string name="action_viewsource">Source code</string>
    <string name="about_text">Recall implements spaced repetition, a memory technique that reinforces previously learned material by reminding at increasingly intervals of time. It\'s useful for vocabulary, phone numbers, study notes, or other miscellaneous facts.\n\nSponsor a coffee to support development?</string>
    <string name="text_interval_ceiling">Interval Ceiling</string>

</resources>
