<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_add" android:title="@string/action_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_build_white_48dp" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_view_source" android:title="@string/action_viewsource"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>
