<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pelmers.recall.ModifyActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/key_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/keyword_button"
        android:inputType="text"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_text"
        android:layout_below="@+id/key_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/description_button"
        android:inputType="textCapSentences|text|textMultiLine"
        android:textIsSelectable="false"
        android:lines="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_reminder"
        android:id="@+id/next_reminder_text"
        android:layout_below="@+id/description_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:minHeight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_reminded"
        android:id="@+id/times_reminded_text"
        android:textSize="18sp"
        android:layout_alignTop="@+id/reset_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="25dp"
        android:gravity="bottom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:minHeight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset_button"
        android:layout_below="@+id/next_reminder_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:id="@+id/delete_button"
        android:layout_alignBottom="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
